...
    <string name="test_teos2_kommentaar">Õpetaja andis mõtte</string>
    <string name="test_teos2_h1_nimi">TII HI</string>
    <string name="test_teos2_h2_nimi">TII HII</string>
    <string name="test_teos2_h3_nimi">TII HIII S</string>
    <string name="test_teos2_h4_nimi">TII HIV</string>

    <string name="test_teos3_nimi">Testteos III</string>
    <string name="test_teos3_autor">Oskar Märtin</string>
    <string name="test_teos3_kommentaar">Õhtul tinistades tuli mõte</string>
    <string name="test_teos3_h1_nimi">TIII HI</string>
    <string name="test_teos3_h2_nimi">TIII HII</string>
    <string name="test_teos3_h3_nimi">TIII HIII</string>
    <string name="test_teos3_h4_nimi">TIII HIV</string>
    <string name="test_teos3_h5_nimi">TIII HV</string>
    <string name="test_teos3_h6_nimi">TIII HVI</string>
    <string name="test_teos3_h7_nimi">TIII HVII</string>

    <string name="test_teos4_nimi">Testteos IV</string>
    <string name="test_teos4_autor">Regina Palatu</string>
    <string name="test_teos4_kommentaar">Tuli väga hea mõte musitseerimiseks!</string>
    <string name="test_teos4_h1_nimi">TIV HI S</string>
    <string name="test_teos4_h2_nimi">TIV HII S</string>
    <string name="test_teos4_h3_nimi">TIV HIII S</string>

    <string name="test_h_ei_salvestu">Ei salvestu</string>
    <string name="test_h_salvestub">Salvestub</string>


</resources>
