...
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horisontaalne_aaris"
            android:layout_marginEnd="@dimen/horisontaalne_aaris"
            android:layout_marginTop="@dimen/vertikaalne_aaris"
            android:layout_marginBottom="@dimen/vertikaalne_aaris"
            android:backgroundTint="@android:color/white"
            android:id="@+id/harjutusekirjeldus"
            android:hint="@string/harjutuse_kirjeldus_vihje"
            android:maxLength="64"
            android:inputType="textCapSentences|textMultiLine"/>

        <LinearLayout android:id="@+id/nupud"
                      android:layout_width="match_parent"
...
