...
    <string name="tana">Today</string>
    <string name="nadal">Week</string>
    <string name="kuu">Month</string>


    <!-- Excerice/Practice or Recording (via microphone) deleteing -->
    <string name="dialog_kas_kustuta_harjutuse_kusimus">Delete exercise</string>
    <string name="dialog_kas_kustuta_salvestuse_kusimus">Delete recording ?</string>
    <string name="snackbar_harjutuse_automaatne_kustutamine">Exercise with no duration deleted !</string>

    <!-- Error messages when selecting date and time -->
    <string name="ajamuutmine_aeg_tulevikus">You have chosen a future time! The time wasn´t changed!</string>
    <string name="muuda_harjutuse_kestust">Choose duration</string>
...
