<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
            android:id="@+id/kustutaharjutus"
            android:title="@string/kusututa"
            android:icon="@drawable/ic_delete_black"
            app:showAsAction="always"
            android:orderInCategory="301"/>
</menu>