...
            android:id="@+id/alustauut"
            android:title="@string/AlustaUutHarjutust"
            android:icon="@drawable/ic_query_builder_black"
            app:showAsAction="always"
            android:orderInCategory="202"/>
    <item
            android:id="@+id/lisatehtud"
            android:title="@string/LisaTehtudHarjutus"
            android:icon="@drawable/ic_add_black"
            app:showAsAction="always"
            android:orderInCategory="203"/>

</menu>
